--- a/roles/docker/templates/daemon.json.j2
+++ b/roles/docker/templates/daemon.json.j2
@@ -1,5 +1,6 @@
 {
   "storage-driver": "overlay2",
   "iptables":       false,
-  "ip-masq":        false
+  "ip-masq":        false,
+  "log-level":      "error"
 }
