--- a/roles/master/templates/master.yml.j2
+++ b/roles/master/templates/master.yml.j2
@@ -19,7 +19,7 @@ spec:
         - -c
         - >-
           {% for host in groups['etcds'] %}echo {{ hostvars[host]['ansible_host'] }} etcd{{ hostvars[host]['etcd_id'] }} >> /etc/hosts && {% endfor %}
-          /apiserver
+          /usr/local/bin/kube-apiserver
           --advertise-address={{ ansible_host }}
           --etcd-servers=https://etcd1:2379,https://etcd2:2379,https://etcd3:2379
           --etcd-cafile=/etc/kubernetes/ssl/etcd-ca.pem
@@ -35,11 +35,12 @@ spec:
           --admission-control=NamespaceLifecycle,LimitRanger,ServiceAccount,PersistentVolumeLabel,DefaultStorageClass,ResourceQuota,DefaultTolerationSeconds
           --allow_privileged=true
           --apiserver-count={{ groups['masters'] | length }}
-      livenessProbe:
-        httpGet:
-          path: /healthz
-          port: 8080
-          host: 127.0.0.1
+          -v=8
+#      livenessProbe:
+#        httpGet:
+#          path: /healthz
+#          port: 8080
+#          host: 127.0.0.1
       resources:
         requests:
           cpu: 100m
@@ -53,7 +54,7 @@ spec:
     - name: controller-manager
       image: {{ controller_manager_image }}
       args:
-        - /controller-manager
+        - /usr/local/bin/kube-controller-manager
         - --master=http://127.0.0.1:8080
         - --service-account-private-key-file=/etc/kubernetes/ssl/master-key.pem
         - --root-ca-file=/etc/kubernetes/ssl/kubernetes-ca.pem
@@ -78,7 +79,7 @@ spec:
     - name: scheduler
       image: {{ scheduler_image }}
       args:
-        - /scheduler
+        - /usr/local/bin/kube-scheduler
         - --master=http://127.0.0.1:8080
         - --leader-elect=true
         - --address=127.0.0.1
