--- a/roles/master-proxy/templates/master-proxy.yml.j2
+++ b/roles/master-proxy/templates/master-proxy.yml.j2
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: master-forwarder
+  name: master-proxy
   namespace: kube-system
   annotations:
-    ansible/config-hash: {{ master_forwarder_config_hashsum }}
+    ansible/config-hash: {{ master_proxy_config_hashsum }}
   labels:
-    name: master-forwarder
+    name: master-proxy
     host: {{ inventory_hostname_short }}
 spec:
   hostNetwork: true
@@ -29,4 +29,4 @@ spec:
   volumes:
     - name: config
       hostPath:
-        path: /etc/master-forwarder/
+        path: /etc/master-proxy/
