--- a/roles/master/templates/master.yml.j2
+++ b/roles/master/templates/master.yml.j2
@@ -1,13 +1,15 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: k8s-master
+  name: master
   namespace: kube-system
   annotations:
     ansible/certificates-hash: {{ master_cert_hashsum }}
+  labels:
+    name: master
+    host: {{ inventory_hostname_short }}
 spec:
   hostNetwork: true
-  initContainers:
   containers:
     - name: apiserver
       image: {{ kubernetes_image }}
@@ -19,7 +21,6 @@ spec:
           {% for host in groups['etcds'] %}echo {{ hostvars[host]['ansible_host'] }} etcd{{ hostvars[host]['etcd_id'] }} >> /etc/hosts && {% endfor %}
           /apiserver
           --advertise-address={{ ansible_host }}
-          --storage-backend=etcd3
           --etcd-servers=https://etcd1:2379,https://etcd2:2379,https://etcd3:2379
           --etcd-cafile=/etc/kubernetes/ssl/etcd-ca.pem
           --etcd-certfile=/etc/kubernetes/ssl/etcd.pem
