--- a/roles/master-certificates/templates/master.json.j2
+++ b/roles/master-certificates/templates/master.json.j2
@@ -1,12 +1,10 @@
 {
   "CN": "Kubernetes Master",
   "hosts": [
-    {% for host in groups['masters'] %}
+    {% for host in groups['all'] %}
     "{{ host }}",
     "{{ hostvars[host]['ansible_host'] }}",
     {% endfor %}
-    "${MASTER1_IP}",
-    "${MASTER2_IP}",
     "127.0.0.1",
     "10.16.0.1",
     "localhost",
