--- a/roles/node/templates/kubelet.service.j2
+++ b/roles/node/templates/kubelet.service.j2
@@ -18,6 +18,8 @@ ExecStart=/bin/sh -c '/usr/local/bin/kubelet \
   --client-ca-file=/etc/kubelet/ca.pem \
   --tls-cert-file=/etc/kubelet/kubelet.pem \
   --tls-private-key-file=/etc/kubelet/kubelet-key.pem \
+  --network-plugin=cni \
+  --node-ip={{ ansible_host }} \
   2>&1 | tee -a /var/log/kubelet.log '
 Restart=on-failure
 ResetSec=5
