--- a/roles/master-certificates/templates/master.json.j2
+++ b/roles/master-certificates/templates/master.json.j2
@@ -4,6 +4,8 @@
     {% for host in groups['all'] %}
     "{{ host }}",
     "{{ hostvars[host]['ansible_host'] }}",
+    "{{ hostvars[host]['inventory_hostname'] }},
+    "{{ hostvars[host]['inventory_hostname_short'] }}",
     {% endfor %}
     "127.0.0.1",
     "10.16.0.1",
