fixed deployment for complex node names
* fixed certificate config syntax
* fixed node undeploy
* merged wait for kubernetes into ansible deployment steps

--- a/roles/master-certificates/templates/master.json.j2
+++ b/roles/master-certificates/templates/master.json.j2
@@ -4,7 +4,7 @@
     {% for host in groups['all'] %}
     "{{ host }}",
     "{{ hostvars[host]['ansible_host'] }}",
-    "{{ hostvars[host]['inventory_hostname'] }},
+    "{{ hostvars[host]['inventory_hostname'] }}",
     "{{ hostvars[host]['inventory_hostname_short'] }}",
     {% endfor %}
     "127.0.0.1",
