--- a/roles/master/templates/master.yml.j2
+++ b/roles/master/templates/master.yml.j2
@@ -32,9 +32,10 @@ spec:
           --kubelet-client-certificate=/etc/kubernetes/ssl/master.pem
           --kubelet-client-key=/etc/kubernetes/ssl/master-key.pem
           --service-cluster-ip-range=10.16.0.0/12
-          --admission-control=NamespaceLifecycle,LimitRanger,ServiceAccount,PersistentVolumeLabel,DefaultStorageClass,ResourceQuota,DefaultTolerationSeconds
+          --admission-control=NamespaceLifecycle,NodeRestriction,LimitRanger,ServiceAccount,PersistentVolumeLabel,DefaultStorageClass,ResourceQuota,DefaultTolerationSeconds
           --allow_privileged=true
           --apiserver-count={{ groups['masters'] | length }}
+          --authorization-mode=Node,RBAC
       livenessProbe:
         httpGet:
           path: /healthz
