--- a/roles/node/templates/kubelet.service.j2
+++ b/roles/node/templates/kubelet.service.j2
@@ -28,6 +28,7 @@ ExecStart=/bin/sh -c '/usr/local/bin/kubelet \
   --eviction-soft="{{ kubelet_eviction_soft }}" \
   --eviction-soft-grace-period={{ kubelet_eviction_soft_grace_period }} \
   --feature-gates={{ feature_gates }} \
+  --read-only-port=0 \
   2>&1 | tee -a /var/log/kubelet.log '
 Restart=on-failure
 ResetSec=5
