setting resource limits and parameters depending on cluster and node size

--- a/roles/etcd/templates/etcd.yml.j2
+++ b/roles/etcd/templates/etcd.yml.j2
@@ -55,7 +55,7 @@ spec:
         - name: ETCDCTL_CA_FILE
           value: /etc/etcd/ssl/ca.pem
         - name: ETCD_SNAPSHOT_COUNT
-          value: "2000"
+          value: "{{ etcd_snapshot_count | int }}"
       livenessProbe:
         tcpSocket:
           port: 2380
