--- a/roles/node/templates/kubelet.service.j2
+++ b/roles/node/templates/kubelet.service.j2
@@ -21,6 +21,10 @@ ExecStart=/bin/sh -c '/usr/local/bin/kubelet \
   --tls-private-key-file=/etc/kubelet/kubelet-key.pem \
   --network-plugin=cni \
   --node-ip={{ ansible_host }} \
+  --max-open-files={{ kubelet_max_open_files | int }} \
+  --max-pods={{ kubelet_max_pods | int }} \
+  --kube-reserved={{ kubelet_kube_reserved }} \
+  --system-reserved={{ kubelet_system_reserved }} \
   2>&1 | tee -a /var/log/kubelet.log '
 Restart=on-failure
 ResetSec=5
