added live-restore=true option

--- a/roles/docker/templates/daemon.json.j2
+++ b/roles/docker/templates/daemon.json.j2
@@ -2,5 +2,6 @@
   "storage-driver": "overlay2",
   "iptables":       false,
   "ip-masq":        false,
+  "live-restore":   true,
   "log-level":      "error"
 }
