--- a/roles/etcd/templates/etcd.yml.j2
+++ b/roles/etcd/templates/etcd.yml.j2
@@ -20,6 +20,8 @@ spec:
           value: etcd{{ etcd_id }}
         - name: ETCD_DATA_DIR
           value: /var/lib/etcd
+        - name: ETCD_AUTO_COMPACTION_RETENTION 
+          value: "3"
         - name: ETCD_LISTEN_CLIENT_URLS
           value: https://0.0.0.0:2379
         - name: ETCD_ADVERTISE_CLIENT_URLS
@@ -46,6 +48,8 @@ spec:
           value: "true"
         - name: ETCD_PEER_TRUSTED_CA_FILE
           value: /etc/etcd/ssl/ca.pem
+        - name: ETCDCTL_API 
+          value: "3"
         - name: ETCDCTL_ENDPOINTS
           value: https://127.0.0.1:2379
         - name: ETCDCTL_CERT_FILE
