local persistant volumes
* enabled persistent-local-volumes feature
* create local file-as-device-mounts via ansible
* deployed persistent-local-volumes daemonset
* disable RBAC for testing environments
* file as device to provide pre provisioned volumes (fixed size, guarantied)
* quota on xfs to provide dynamic volumes (administrator can change size, storage can be over provisioned)
* configurable authorization_mode and feature_gates

NOTES:
* :latest fixes a parse config bug in :v1.0.1

--- a/roles/master/templates/master.yml.j2
+++ b/roles/master/templates/master.yml.j2
@@ -30,11 +30,12 @@ spec:
           --admission-control=NamespaceLifecycle,NodeRestriction,LimitRanger,ServiceAccount,PersistentVolumeLabel,DefaultStorageClass,ResourceQuota,DefaultTolerationSeconds
           --allow_privileged=true
           --apiserver-count={{ groups['masters'] | length }}
-          --authorization-mode=Node,RBAC
+          --authorization-mode={{ authorization_mode }}
           --anonymous-auth=false
           --target-ram-mb={{ apiserver_limit_target_ram_mb | int }}
           --max-requests-inflight={{ apiserver_max_requests_inflight | int }}
           --max-mutating-requests-inflight={{ apiserver_max_mutating_requests_inflight | int }}
+          --feature-gates={{ feature_gates }}
       env:
         - name: CONFIG_HASH
           value: {{ master_cert_hashsum }}
@@ -63,6 +64,7 @@ spec:
         - --leader-elect=true
         - --address=127.0.0.1
         - --port=10252
+        - --feature-gates={{ feature_gates }}
       env:
         - name: CONFIG_HASH
           value: {{ master_cert_hashsum }}
@@ -91,6 +93,7 @@ spec:
         - --port=10251
         - --kube-api-qps={{ scheduler_api_qps | int }}
         - --kube-api-burst={{ scheduler_api_burst | int }}
+        - --feature-gates={{ feature_gates }}
       env:
         - name: CONFIG_HASH
           value: {{ master_cert_hashsum }}
