--- a/roles/node/templates/kubelet.service.j2
+++ b/roles/node/templates/kubelet.service.j2
@@ -29,6 +29,7 @@ ExecStart=/bin/sh -c '/usr/local/bin/kubelet \
   --eviction-soft="{{ kubelet_eviction_soft }}" \
   --eviction-soft-grace-period={{ kubelet_eviction_soft_grace_period }} \
   --docker-disable-shared-pid=false \
+  --feature-gates={{ feature_gates }} \
   2>&1 | tee -a /var/log/kubelet.log '
 Restart=on-failure
 ResetSec=5
