--- a/roles/docker/templates/daemon.json.j2
+++ b/roles/docker/templates/daemon.json.j2
@@ -8,5 +8,10 @@
     "max-size": "10m",
     "max-file": "5"
   },
+  "insecure-registries" : [
+    "10.0.0.0/8",
+    "172.16.0.0/12",
+    "192.168.0.0/16"
+  ],
   "log-level":      "error"
 }
