added api domain to certificate

--- a/roles/master-certificates/templates/master.json.j2
+++ b/roles/master-certificates/templates/master.json.j2
@@ -7,6 +7,7 @@
     "{{ hostvars[host]['inventory_hostname'] }}",
     "{{ hostvars[host]['inventory_hostname_short'] }}",
     {% endfor %}
+    "{{ cluster.api_domain }}",
     "127.0.0.1",
     "10.16.0.1",
     "localhost",
