make target to update weave / updated weave to 2.2.1

--- a/roles/weave-certificates/templates/weave-secret.yml.j2
+++ b/roles/weave-certificates/templates/weave-secret.yml.j2
@@ -2,8 +2,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: weave-net
+  name: weave-password
   namespace: kube-system
 type: Opaque
 data:
-  password: {{ weave_secret | b64encode }}
+  weave-password: {{ weave_secret | b64encode }}
