added internal regisrty mirror

--- a/roles/docker/templates/daemon.json.j2
+++ b/roles/docker/templates/daemon.json.j2
@@ -11,5 +11,8 @@
     "172.16.0.0/12",
     "192.168.0.0/16"
   ],
+	"registry-mirrors": [
+    "http://registry-mirror.kube-system.svc:5000/"
+  ],
   "log-level":      "error"
 }
