--- a/roles/master/templates/master.yml.j2
+++ b/roles/master/templates/master.yml.j2
@@ -28,7 +28,7 @@ spec:
           --kubelet-client-key=/etc/kubernetes/ssl/master-key.pem
           --service-cluster-ip-range=10.16.0.0/12
           --admission-control=NamespaceLifecycle,NodeRestriction,LimitRanger,ServiceAccount,DefaultStorageClass,ResourceQuota,DefaultTolerationSeconds
-          --allow_privileged=true
+          --allow-privileged=true
           --apiserver-count={{ groups['masters'] | length }}
           --authorization-mode={{ authorization_mode }}
           --anonymous-auth=false
