updated weave to 2.3.0

--- a/roles/weave-certificates/templates/weave-secret.yml.j2
+++ b/roles/weave-certificates/templates/weave-secret.yml.j2
@@ -2,8 +2,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: weave-passwd
+  name: weave-password
   namespace: kube-system
 type: Opaque
 data:
-  weave-passwd: {{ weave_secret | b64encode }}
+  weave-password: {{ weave_secret | b64encode }}
