--- a/roles/node/templates/kube-proxy-config.j2
+++ b/roles/node/templates/kube-proxy-config.j2
@@ -1,4 +1,4 @@
-apiVersion: componentconfig/v1alpha1
+apiVersion: kubeproxy.config.k8s.io/v1alpha1
 kind: KubeProxyConfiguration
 clusterCIDR: "10.48.0.0/12"
 hostnameOverride: "{{ ansible_host }}"
