fixed admission controller plugins

--- a/roles/master/templates/master.yml.j2
+++ b/roles/master/templates/master.yml.j2
@@ -27,7 +27,8 @@ spec:
           --kubelet-client-certificate=/etc/kubernetes/ssl/master.pem
           --kubelet-client-key=/etc/kubernetes/ssl/master-key.pem
           --service-cluster-ip-range=10.16.0.0/12
-          --admission-control=NamespaceLifecycle,NodeRestriction,LimitRanger,ServiceAccount,DefaultStorageClass,ResourceQuota,DefaultTolerationSeconds
+          --enable-admission-plugins=NodeRestriction
+          --disable-admission-plugins=PersistentVolumeLabel
           --allow-privileged=true
           --apiserver-count={{ groups['masters'] | length }}
           --authorization-mode={{ authorization_mode }}
