Revert "use --config=file setup for kubelet configuration"
This reverts commit fbeea9b2d15c8b7ed7fc337fbb28cef59dda8fbf.

--- a/roles/master/templates/master.yml.j2
+++ b/roles/master/templates/master.yml.j2
@@ -43,7 +43,7 @@ spec:
           --target-ram-mb={{ apiserver_limit_target_ram_mb | int }}
           --max-requests-inflight={{ apiserver_max_requests_inflight | int }}
           --max-mutating-requests-inflight={{ apiserver_max_mutating_requests_inflight | int }}
-          --feature-gates={{ feature_gates_string }}
+          --feature-gates={{ feature_gates }}
           --service-node-port-range={{ service_node_port_range }}
       env:
         - name: CONFIG_HASH
@@ -75,7 +75,7 @@ spec:
         - --leader-elect=true
         - --address=127.0.0.1
         - --port=10252
-        - --feature-gates={{ feature_gates_string }}
+        - --feature-gates={{ feature_gates }}
       env:
         - name: CONFIG_HASH
           value: {{ master_config_hash }}
@@ -104,7 +104,7 @@ spec:
         - --port=10251
         - --kube-api-qps={{ scheduler_api_qps | int }}
         - --kube-api-burst={{ scheduler_api_burst | int }}
-        - --feature-gates={{ feature_gates_string }}
+        - --feature-gates={{ feature_gates }}
       env:
         - name: CONFIG_HASH
           value: {{ master_config_hash }}
