--- a/roles/etcd/templates/etcd.yml.j2
+++ b/roles/etcd/templates/etcd.yml.j2
@@ -52,11 +52,11 @@ spec:
           value: "3"
         - name: ETCDCTL_ENDPOINTS
           value: https://127.0.0.1:2379
-        - name: ETCDCTL_CERT_FILE
+        - name: ETCDCTL_CERT
           value: /etc/etcd/ssl/member.pem
-        - name: ETCDCTL_KEY_FILE
+        - name: ETCDCTL_KEY
           value: /etc/etcd/ssl/member-key.pem
-        - name: ETCDCTL_CA_FILE
+        - name: ETCDCTL_CACERT
           value: /etc/etcd/ssl/ca.pem
         - name: ETCD_SNAPSHOT_COUNT
           value: "{{ etcd_snapshot_count | int }}"
