--- a/roles/resources-webhook/templates/resources_webhook.yml.j2
+++ b/roles/resources-webhook/templates/resources_webhook.yml.j2
@@ -10,17 +10,30 @@ spec:
       image: "pandorasnox/kubernetes-default-container-resources:1.3.0"
       command:
         - "/kubernetes-default-container-resources"
+      ports:
+        - containerPort: {{ resources_webhook_port }}
       args:
-        - "-addr='{{ resources_webhook_addr }}'"
-        - "-sslCert='{{ resources_webhook_cert_dir }}/server.pem'"
-        - "-sslKey='{{ resources_webhook_cert_dir }}/server-key.pem'"
+        #- "-tlsDisabled=true"
+        - -addr=:{{ resources_webhook_port }}
+        - -sslCert=/etc/resources-webhook/ssl/server.pem
+        - -sslKey=/etc/resources-webhook/ssl/server-key.pem
       env:
         - name: CONFIG_HASH
           value: {{ resources_webhook_config_hash }}
+      #livenessProbe:
+      #  tcpSocket:
+      #    port: { resources_webhook_port }}
+      #resources:
+      #  requests:
+      #    cpu: { etcd_requests_cpu }}
+      #    memory: { etcd_requests_memory }}
+      #  limits:
+      #    cpu: { etcd_limits_cpu }}
+      #    memory: { etcd_limits_memory }}
+      volumeMounts:
+        - name: certs
+          mountPath: /etc/resources-webhook/ssl
   volumes:
-    - name: config
+    - name: certs
       hostPath:
-        path: /etc/kubernetes
-    - name: logs
-      hostPath:
-        path: /var/log/kubernetes
+        path: /etc/resources-webhook/ssl
