--- a/roles/node/templates/kubelet.service.j2
+++ b/roles/node/templates/kubelet.service.j2
@@ -11,7 +11,7 @@ ExecStart=/bin/sh -c '/usr/local/bin/kubelet \
   --container-runtime docker \
   --image-pull-progress-deadline=2m \
   --allow-privileged=true \
-  --cluster-dns={{ ansible_host }} \
+  --cluster-dns=192.168.0.3 \
   --cluster-domain=cluster.local \
   --kubeconfig=/etc/kubelet/kubeconfig \
   --serialize-image-pulls=false \
