--- a/roles/local-volumes/templates/volume.yml.j2
+++ b/roles/local-volumes/templates/volume.yml.j2
@@ -13,8 +13,8 @@ spec:
   #volumeMode: Filesystem
   accessModes:
     - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Recycle
-  storageClassName: local-storage
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: local-storage-dedicated
   local:
     path: {{ path }}
   nodeAffinity:
