--- a/roles/etcd/templates/etcd.yml.j2
+++ b/roles/etcd/templates/etcd.yml.j2
@@ -5,14 +5,15 @@ metadata:
   namespace: kube-system
 spec:
   hostNetwork: true
+  hostAliases:
+{% for host in groups['etcds'] %}
+  - ip: "{{ hostvars[host]['ansible_host'] }}"
+    hostnames:
+    - "etcd{{ hostvars[host]['etcd_id'] }}"
+{% endfor %}
   containers:
     - name: etcd
       image: {{ etcd_image }}
-      command:
-        - sh
-      args:
-        - -c
-        - "{% for host in groups['etcds'] %}echo {{ hostvars[host]['ansible_host'] }} etcd{{ hostvars[host]['etcd_id'] }} >> /etc/hosts && {% endfor %} /usr/local/bin/etcd"
       env:
         - name: CONFIG_HASH
           value: {{ etcd_config_hash }}
