--- a/roles/master/templates/master.yml.j2
+++ b/roles/master/templates/master.yml.j2
@@ -5,46 +5,47 @@ metadata:
   namespace: kube-system
 spec:
   hostNetwork: true
+  hostAliases:
+{% for host in groups['etcds'] %}
+  - ip: "{{ hostvars[host]['ansible_host'] }}"
+    hostnames:
+    - "etcd{{ hostvars[host]['etcd_id'] }}"
+{% endfor %}
   containers:
     - name: apiserver
       image: {{ apiserver_image }}
-      command:
-        - sh
       args:
-        - -c
-        - >-
-          {% for host in groups['etcds'] %}echo {{ hostvars[host]['ansible_host'] }} etcd{{ hostvars[host]['etcd_id'] }} >> /etc/hosts && {% endfor %}
-          kube-apiserver
-          --advertise-address={{ ansible_host }}
-          --etcd-servers=https://etcd1:2379,https://etcd2:2379,https://etcd3:2379
-          --etcd-cafile=/etc/kubernetes/ssl/etcd-ca.pem
-          --etcd-certfile=/etc/kubernetes/ssl/etcd.pem
-          --etcd-keyfile=/etc/kubernetes/ssl/etcd-key.pem
-          --client-ca-file=/etc/kubernetes/ssl/kubernetes-ca.pem
-          --requestheader-client-ca-file=/etc/kubernetes/ssl/kubernetes-client-ca.pem
-          --tls-cert-file=/etc/kubernetes/ssl/master.pem
-          --tls-private-key-file=/etc/kubernetes/ssl/master-key.pem
-          --kubelet-certificate-authority=/etc/kubernetes/ssl/kubernetes-ca.pem
-          --kubelet-client-certificate=/etc/kubernetes/ssl/master.pem
-          --kubelet-client-key=/etc/kubernetes/ssl/master-key.pem
-          --service-cluster-ip-range=10.16.0.0/12
-          --enable-admission-plugins=NodeRestriction
-          --allow-privileged=true
-          --apiserver-count={{ groups['masters'] | length }}
-          --authorization-mode={{ authorization_mode }}
-          --anonymous-auth=false
-          --token-auth-file=/etc/kubernetes/token-auth-file
-          --audit-log-format=json
-          --audit-log-maxage=15
-          --audit-log-maxbackup=50
-          --audit-log-maxsize=100
-          --audit-log-path=/var/log/kubernetes/audit.log
-          --audit-policy-file=/etc/kubernetes/audit-policy.yaml
-          --target-ram-mb={{ apiserver_limit_target_ram_mb | int }}
-          --max-requests-inflight={{ apiserver_max_requests_inflight | int }}
-          --max-mutating-requests-inflight={{ apiserver_max_mutating_requests_inflight | int }}
-          --feature-gates={{ feature_gates }}
-          --service-node-port-range={{ service_node_port_range }}
+        - kube-apiserver
+        - --advertise-address={{ ansible_host }}
+        - --etcd-servers=https://etcd1:2379,https://etcd2:2379,https://etcd3:2379
+        - --etcd-cafile=/etc/kubernetes/ssl/etcd-ca.pem
+        - --etcd-certfile=/etc/kubernetes/ssl/etcd.pem
+        - --etcd-keyfile=/etc/kubernetes/ssl/etcd-key.pem
+        - --client-ca-file=/etc/kubernetes/ssl/kubernetes-ca.pem
+        - --requestheader-client-ca-file=/etc/kubernetes/ssl/kubernetes-client-ca.pem
+        - --tls-cert-file=/etc/kubernetes/ssl/master.pem
+        - --tls-private-key-file=/etc/kubernetes/ssl/master-key.pem
+        - --kubelet-certificate-authority=/etc/kubernetes/ssl/kubernetes-ca.pem
+        - --kubelet-client-certificate=/etc/kubernetes/ssl/master.pem
+        - --kubelet-client-key=/etc/kubernetes/ssl/master-key.pem
+        - --service-cluster-ip-range=10.16.0.0/12
+        - --enable-admission-plugins=NodeRestriction
+        - --allow-privileged=true
+        - --apiserver-count={{ groups['masters'] | length }}
+        - --authorization-mode={{ authorization_mode }}
+        - --anonymous-auth=false
+        - --token-auth-file=/etc/kubernetes/token-auth-file
+        - --audit-log-format=json
+        - --audit-log-maxage=15
+        - --audit-log-maxbackup=50
+        - --audit-log-maxsize=100
+        - --audit-log-path=/var/log/kubernetes/audit.log
+        - --audit-policy-file=/etc/kubernetes/audit-policy.yaml
+        - --target-ram-mb={{ apiserver_limit_target_ram_mb | int }}
+        - --max-requests-inflight={{ apiserver_max_requests_inflight | int }}
+        - --max-mutating-requests-inflight={{ apiserver_max_mutating_requests_inflight | int }}
+        - --feature-gates={{ feature_gates }}
+        - --service-node-port-range={{ service_node_port_range }}
       env:
         - name: CONFIG_HASH
           value: {{ master_config_hash }}
